style fixes for slider, black panel titles, mobile and others

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     <div class="container-fluid">
                         <div class="cities-wrapper">
                             <span class="cities-slider--city--top__icon"><img src="img/big-pin.png" alt=""></span>
-                            <h1 class="cities-slider--city--top__title">Otras Ciudades</h1>
+                            <h1 class="cities-slider--city--top__title other-cities">Otras Ciudades</h1>
                         </div>
                         <div class="cities-slider--arrows">
                             <img src="img/arrow-left.png" alt="" class="arrow arrow-left">
@@ -562,11 +562,19 @@ Realiza tu reserva con 24 horas de antelación a través de beforeboarding.com *
                         <div class="col-9">
                             <div class="travel-panel--info">
                                 <h4 class="travel-panel--info__title">Wi-Fi Boingo</h4>
-                                <h5 class="travel-panel--info__text">Esta es la forma más conveniente de redimir las Estrellas BHD León que acumulaste con Mastercard Black para que hagas el viaje que te mereces.</h5>
+                                <h5 class="travel-panel--info__text">Proporciona acceso global, gratuito e ilimitado después de inscribirse a su cuenta
+                                    Boingo, en más de 1 millón de hotspots con velocidad superior al promedio de banda
+                                    ancha.
+                                    </h5>
                                 <div class="collapse" id="bhd">
                                     <span>
-                                        Proporciona acceso global, gratuito e ilimitado después de inscribirse a su cuenta Boingo, en más de 1 millón de hotspots con velocidad superior al promedio de banda ancha, estos hotspots incluyen una red en aeropuertos, hoteles, restaurantes, escenarios, estadios, hubs de transporte y vuelos y te da acceso hasta para cuatro dispositivos.
-                                        Solo debes registrar tu Tarjeta Mastercard Black ya activada en <a href="https://mastercard.boingo.com">https://mastercard.boingo.com</a> para inscribirte al beneficio de Wi-Fi. Una vez inscrito recibirás instrucciones para descargar la aplicación WiFinder de Boingo y así tener acceso a la red.
+                                        Estos hotspots incluyen una red en aeropuertos, hoteles, restaurantes,
+                                        escenarios, estadios, hubs de transporte y vuelos y te da acceso hasta para cuatro
+                                        dispositivos. Solo debes registrar tu Tarjeta Mastercard Black ya activada en
+                                        <a href="https://mastercard.boingo.com" target="_blank">https://mastercard.boingo.com</a>       para inscribirte al beneficio de Wi-Fi. Una vez inscrito
+                                        recibirás instrucciones para descargar la aplicación WiFinder de Boingo y así tener
+                                        acceso a la red.
+
                                     </span>
                                 </div>
                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#bhd" aria-expanded="false" aria-controls="collapseExample">
@@ -719,7 +727,7 @@ Realiza tu reserva con 24 horas de antelación a través de beforeboarding.com *
                                     robos en cajeros automáticos.</h4>
                                 <div class="collapse" id="asalto">
                                     <span>
-                                        Si un tarjeta hambiente MasterCard Black es víctima de un robo o asalto utilizando un cajero automático, esta protección reemplaza el efectivo robado hasta por USD 1.000 por ocurrencia/ USD 3.000 por 12 meses y de US$10,000 en caso de fallecimiento del titular producto del siniestro.
+                                        Si un tarjeta habiente MasterCard Black es víctima de un robo o asalto utilizando un cajero automático, esta protección reemplaza el efectivo robado hasta por USD 1.000 por ocurrencia/ USD 3.000 por 12 meses y de US$10,000 en caso de fallecimiento del titular producto del siniestro.
                                     </span>
                                 </div>
                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#asalto" aria-expanded="false" aria-controls="collapseExample">
@@ -879,7 +887,12 @@ Alertas de Consumo Entérate al instante de tus movimientos, controla mejor tus 
                                 <h4 class="benefits-panel--info__title">Estrellas BHD León.</h4>
                                 <div class="collapse" id="leon-stars">
                                     <span>
-                                        Proporciona asistencia durante emergencias relacionada con la tarjeta en cualquier momento, desde cualquier lugar, por medio de una llamada telefónica gratuita.
+                                        Mientras más consumes con Mastercard Black más ahorras. Por cada consumo de
+                                        RD$100 o US$3 en dólares acumulas una Estrella BHD León.<br><br> Cada Estrella tiene el
+                                        valor de RD$1. Además podrás disfrutar de los programas de lealtad Estrellas BHD
+                                        León.
+                                        <br><br>*Este beneficio solo aplica para las Tarjetas BHD León Mastercard Black.
+
                                     </span>
                                 </div>
                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#leon-stars" aria-expanded="false" aria-controls="collapseExample">
