--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner flip-effect">
-                                        <div class="card-front-text d-none d-lg-block">
+                                        <div class="card-front-text ">
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
                                             <div class="card-text">Disfruta experiencias exclusivas
@@ -419,7 +419,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner flip-effect">
-                                        <div class="card-front-text d-none d-lg-block">
+                                        <div class="card-front-text ">
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard Traveler<br>
                                                 Rewards</div>
@@ -441,7 +441,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner flip-effect">
-                                        <div class="card-front-text d-none d-lg-block">
+                                        <div class="card-front-text ">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
                                             <div class="card-text">Viaja siempre al mejor estilo VIP en otras ciudades.</div>
