--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                             <div class="card-title">Loungekey<br></div>
                                             <div class="card-text">
                                                 Viaja siempre al mejor estilo VIP en New York.<br>
-                                                *Este benecio solo aplica para las tarjetas BHD León Mastercard Black
+                                                *Este beneficio solo aplica para las tarjetas BHD León Mastercard Black
                                             </div>
                                             <button>ver más</button>
                                         </div>
@@ -272,7 +272,7 @@
                                             <div class="card-title">Loungekey<br></div>
                                             <div class="card-text">
                                                 Viaja siempre al mejor estilo VIP en New York.<br>
-                                                *Este benecio solo aplica para las tarjetas BHD León Mastercard Black
+                                                *Este beneficio solo aplica para las tarjetas BHD León Mastercard Black
                                             </div>
                                             <button>ver más</button>
                                         </div>
@@ -377,7 +377,7 @@
                                             <div class="card-title">Loungekey<br></div>
                                             <div class="card-text">
                                                 Viaja siempre al mejor estilo VIP en New York.<br>
-                                                *Este benecio solo aplica para las tarjetas BHD León Mastercard Black
+                                                *Este beneficio solo aplica para las tarjetas BHD León Mastercard Black
                                             </div>
                                             <button>ver más</button>
                                         </div>
@@ -479,7 +479,10 @@
                                         <div class="card-front-text ">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
-                                            <div class="card-text">Viaja siempre al mejor estilo VIP en otras ciudades.</div>
+                                            <div class="card-text">
+                                                Viaja siempre al mejor estilo VIP en otras ciudades.<br>
+                                                *Este beneficio solo aplica para las tarjetas BHD León Mastercard Black
+                                            </div>
                                             <button>ver más</button>
                                         </div>
                                         <div class="card-back-text">
@@ -577,6 +580,7 @@
                                         Incluye diez (10) visitas gratuitas por año** por tarjetahabiente, a partir del 1 de febrero 2020 este beneficio será unicamente exclusivo para titulares (principales o adicionales) incluyendo solo acompañantes menores de 18 años***. Para las reservas realizadas antes de esta fecha aplican las condiciones actuales.
                                         Realiza tu reserva con 24 horas de antelación a través de beforeboarding.com *Acceso para la Sala Premium y Sala Caribe en AILA y Sala Zafiro en El Cibao. **la fecha de corte anual es cada 1 de julio. ***Si usas los servicios de salida y llegada habrás utilizado 2 visitas. Si vas acompañado, habrás utilizado tantas visitas como acompañantes viajen contigo.
                                         <br>
+                                        <br>
                                         *Este beneficio solo aplica para las tarjetas BHD León Mastercard Black
                                     </span>
                                 </div>
@@ -636,7 +640,7 @@
                                     <span>
                                         Estos hotspots incluyen una red en aeropuertos, hoteles, restaurantes,
                                         escenarios, estadios, hubs de transporte y vuelos y te da acceso hasta para cuatro
-                                        dispositivos. Solo debes registrar tu Tarjeta Mastercard Black ya activada en
+                                        dispositivos. Solo debes registrar tu Tarjeta Mastercard Black o Platinum ya activada en
                                         <a href="https://mastercard.boingo.com" target="_blank">https://mastercard.boingo.com</a>       para inscribirte al beneficio de Wi-Fi. Una vez inscrito
                                         recibirás instrucciones para descargar la aplicación WiFinder de Boingo y así tener
                                         acceso a la red.
