--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                                 <div class="collapse" id="collapseExample">
                                     <span>
                                         Nuestro Centro de Asistencia Local de Viajes realizará los trámites de canje de Estrellas BHD León para planificar el viaje que deseas y comprar pasajes en la línea aérea de tu preferencia sin restricciones de fechas. También puedes realizar excursiones y reservación de hoteles locales e internacionales, cruceros, eventos y mucho más.
-                                    </span>>
+                                    </span>
                                 </div>
                                 <button  type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                                     <img src="img/up-arrow.png" alt="">
@@ -887,8 +887,6 @@
                                         <b>Mastercard Platinum</b> cubre los gastos de viaje y acomodaciones, pagando por adelantado
                                         hasta US$1,500, si tu viaje es repentinamente cancelado, o si hay demoras o retraso por más de 4
                                         horas, hasta US$100.
-                                        <br><br>
-                                        *Este beneficio solo aplica para las Tarjetas BHD León Mastercard Black.
                                     </span>
                                 </div>
                                 <button  type="button" data-bs-toggle="collapse" data-bs-target="#inconvinience" aria-expanded="false" aria-controls="collapseExample">
@@ -1010,7 +1008,6 @@
                                         RD$100 o US$3 en dólares acumulas una Estrella BHD León.<br><br> Cada Estrella tiene el
                                         valor de RD$1. Además podrás disfrutar de los programas de lealtad Estrellas BHD
                                         León.
-                                        <br><br>*Este beneficio solo aplica para las Tarjetas BHD León Mastercard Black.
 
                                     </span>
                                 </div>
@@ -1038,7 +1035,6 @@
                                 <div class="collapse" id="cuotas-leon">
                                     <span>
                                         Es la línea de crédito adicional de tu tarjeta principal, que funciona con un límite independiente para que puedas realizar compras pagando directamente en el comercio de tu preferencia. Con tus Tarjetas de Crédito BHD León puedes pagar tus consumos en la cantidad de cuotas que quieras. Desde adquirir un electrodoméstico, comprar ropa o tus vacaciones soñadas hasta cubrir los gastos escolares de tus hijos. Conoce más aquí.
-                                    <br>*Este beneficio solo aplica para las Tarjetas BHD León Mastercard Black.
                                     </span>
                                 </div>
                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#cuotas-leon" aria-expanded="false" aria-controls="collapseExample">
