--- a/index.html
+++ b/index.html
@@ -520,10 +520,10 @@
                     </div>
                 </div>
                 <div class="bottom-text--img  d-block d-md-none">
-                    <img id="card1"src="img/tarjetas4.png" alt="" class="animate__animated">
-                    <img id="card2"src="img/tarjetas3.png" alt="" class="animate__animated">
-                    <img id="card3"src="img/tarjetas2.png" alt="" class="animate__animated">
-                    <img id="card4"src="img/tarjetas1.png" alt="" class="animate__animated">
+                    <img id="card1"src="img/tarjetas4.png" alt="" class="cards animate__animated">
+                    <img id="card2"src="img/tarjetas3.png" alt="" class="cards animate__animated">
+                    <img id="card3"src="img/tarjetas2.png" alt="" class="cards animate__animated">
+                    <img id="card4"src="img/tarjetas1.png" alt="" class="cards animate__animated">
                 </div>
             </div>
         </div>
@@ -539,7 +539,7 @@
                         <div class="col-9">
                             <div class="travel-panel--info">
                                 <h4 class="travel-panel--info__title">BHD León Viajes.</h4>
-                                <h5 class="travel-panel--info__text">Esta es la forma más conveniente de redimir las Estrellas BHD León que acumulaste con tus tarjetas Platinum y Mastercard Black BHD León para que hagas el viaje que te mereces.</h5>
+                                <h5 class="travel-panel--info__text">Esta es la forma más conveniente de redimir las Estrellas BHD León que acumulaste con tus tarjetas Mastercard Platinum y Black BHD León para que hagas el viaje que te mereces.</h5>
                                 <div class="collapse" id="collapseExample">
                                     <span>
                                         Nuestro Centro de Asistencia Local de Viajes realizará los trámites de canje de Estrellas BHD León para planificar el viaje que deseas y comprar pasajes en la línea aérea de tu preferencia sin restricciones de fechas. También puedes realizar excursiones y reservación de hoteles locales e internacionales, cruceros, eventos y mucho más.
@@ -562,7 +562,7 @@
                         <div class="col-9">
                             <div class="travel-panel--info">
                                 <h4 class="travel-panel--info__title">Before Boarding.</h4>
-                                <h5 class="travel-panel--info__text">Tu Tarjeta Mastercard Black BHD León te ofrece los servicios exclusivos de Before Boarding en el Aeropuerto Internacional de Las Américas (AILA) y Aeropuerto Internacional El Cibao (STI).</h5>
+                                <h5 class="travel-panel--info__text">Tus tarjetas Mastercard Black BHD León te ofrece los servicios exclusivos de Before Boarding en el Aeropuerto Internacional de Las Américas (AILA) y Aeropuerto Internacional El Cibao (STI).</h5>
                                 <div class="collapse" id="before">
                                     <span>
                                         <ul>
@@ -574,10 +574,10 @@
                                             <li>Recogida de equipaje.</li>
                                         </ul>
                                         Incluye diez (10) visitas gratuitas por año** por tarjetahabiente, a partir del 1 de febrero 2020 este beneficio será unicamente exclusivo para titulares (principales o adicionales) incluyendo solo acompañantes menores de 18 años***. Para las reservas realizadas antes de esta fecha aplican las condiciones actuales.
-                                        Realiza tu reserva con 24 horas de antelación a través de <a href="beforeboarding.com" target="_blank">beforeboarding.com</a> *Acceso para la Sala Premium y Sala Caribe en AILA y Sala Zafiro en El Cibao. **la fecha de corte anual es cada 1 de julio. ***Si usas los servicios de salida y llegada habrás utilizado 2 visitas. Si vas acompañado, habrás utilizado tantas visitas como acompañantes viajen contigo.
+                                        Realiza tu reserva con 24 horas de antelación a través de <a href="https://beforeboarding.com/" target="_blank">https://beforeboarding.com</a> *Acceso para la Sala Premium y Sala Caribe en AILA y Sala Zafiro en El Cibao. **la fecha de corte anual es cada 1 de julio. ***Si usas los servicios de salida y llegada habrás utilizado 2 visitas. Si vas acompañado, habrás utilizado tantas visitas como acompañantes viajen contigo.
                                         <br>
                                         <br>
-                                        *Este beneficio solo aplica para las tarjetas Mastercard Platinum y Mastercard Black BHD León.
+                                        *Este beneficio solo aplica para tus tarjetas Mastercard Platinum y Black BHD León.
                                     </span>
                                 </div>
                                 <button  type="button" data-bs-toggle="collapse" data-bs-target="#before" aria-expanded="false" aria-controls="collapseExample">
@@ -636,8 +636,8 @@
                                     <span>
                                         Estos hotspots incluyen una red en aeropuertos, hoteles, restaurantes,
                                         escenarios, estadios, hubs de transporte y vuelos y te da acceso hasta para cuatro
-                                        dispositivos. Solo debes registrar tus Tarjeta Mastercard Platinum y Mastercard Black BHD León ya activadas en
-                                        <a href="https://mastercard.boingo.com" target="_blank">https://mastercard.boingo.com</a> para inscribirte al beneficio de Wi-Fi. Una vez inscrito
+                                        dispositivos. Solo debes registrar tus tarjetas Mastercard Platinum y Black BHD León ya activadas en
+                                        <a style="color:#fff" href="https://mastercard.boingo.com" target="_blank">https://mastercard.boingo.com</a> para inscribirte al beneficio de Wi-Fi. Una vez inscrito
                                         recibirás instrucciones para descargar la aplicación WiFinder de Boingo y así tener
                                         acceso a la red.
 
@@ -665,7 +665,7 @@
                                     <span >
                                         Recibe desayuno diario gratuito, upgrades en habitaciones*, early check-in/late check-out* y servicios especiales en más de 2,000 hoteles y resorts de 4 y 5 estrellas, alrededor del mundo. Además, ahorros y beneficios exclusivos en alquiler de autos, boletos aéreos, tours y cruceros. También cuentas con la plataforma digital para comprar reservar y comprar online tus tickets aéreos, hoteles, alquiler de auto, y todo lo demás que necesitas para tu viaje, en moneda local y en múltiples idiomas.
 
-<br><br>Ingresa a <a href="http://travel.mastercard.com" target="_blank">http://travel.mastercard.com</a> y prepara tus vacaciones.
+<br><br>Ingresa a <a style="color: #fff;" href="http://travel.mastercard.com" target="_blank">http://travel.mastercard.com</a> y prepara tus vacaciones.
 
                                     </span>
                                 </div>
@@ -795,7 +795,7 @@
                                     robos en cajeros automáticos.</h4>
                                 <div class="collapse" id="asalto">
                                     <span>
-                                        Si un tarjeta habiente MasterCard Black BHD León es víctima de un robo o asalto utilizando un cajero automático, esta protección reemplaza el efectivo robado hasta por USD 1.000 por ocurrencia/ USD 3.000 por 12 meses y de US$10,000 en caso de fallecimiento del titular producto del siniestro.
+                                        Si un tarjeta habiente Mastercard Black BHD León es víctima de un robo o asalto utilizando un cajero automático, esta protección reemplaza el efectivo robado hasta por USD 1.000 por ocurrencia/ USD 3.000 por 12 meses y de US$10,000 en caso de fallecimiento del titular producto del siniestro.
                                         <br><br>
                                         *Este beneficio solo aplica para tus tarjetas Mastercard Black BHD León.
                                     </span>
@@ -827,7 +827,7 @@
                                         <b>MastercardAssist Black:</b> La Mastercard Black BHD León cuenta con la seguridad y protección
                                         que ofrece cobertura de gastos médicos y dinero en efectivo para gastos de hospital.
                                         Gastos médicos hasta USD 150.000 hasta por 60 días consecutivos. El viaje debe haber
-                                        sido pagado en su totalidad con tu tarjeta Black BHD León.
+                                        sido pagado en su totalidad con tu tarjeta Mastercard Black BHD León.
                                     </span>
                                 </div>
                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#assist" aria-expanded="false" aria-controls="collapseExample">
@@ -904,7 +904,7 @@
                                 <h4 class="protection-panel--info__title">Protección de Equipaje.</h4>
                                 <div class="collapse" id="package">
                                     <span>
-                                        <b>Mastercard Black BHD León</b> te ayuda a recuperar tu equipaje perdido con el apoyo directo de la aerolínea y cubre los gastos incurridos como resultado de demora hasta por US$600 o pérdida de equipaje hasta por US$3,000.Para obtener más información sobre los beneficios Mastercard, llama al 1.829.954.8445 o visita <a href="www.mastercard.com/do/black">www.mastercard.com/do/black</a> 
+                                        <b>Mastercard Black BHD León</b> te ayuda a recuperar tu equipaje perdido con el apoyo directo de la aerolínea y cubre los gastos incurridos como resultado de demora hasta por US$600 o pérdida de equipaje hasta por US$3,000.Para obtener más información sobre los beneficios Mastercard, llama al 1.829.954.8445 o visita <a style="color: #fff;" href="https://mastercard.com/do/black" target="_blank">www.mastercard.com/do/black</a> 
                                         <br><br>
 
                                         Alertas de Consumo Entérate al instante de tus movimientos, controla mejor tus transacciones y detecta a tiempo cualquier consumo no autorizado con nuestro servicio de Alertas, a través del cual recibirás un correo electrónico con el detalle de las actividades realizadas con tu tarjeta de crédito.
@@ -953,7 +953,7 @@
                                 <h4 class="protection-panel--info__title">Protección de Compras.</h4>
                                 <div class="collapse" id="compras">
                                     <span>
-                                        Compra confiada con tus tarjetas Mastercard Black BHD León pues la mayoría de tus compras están protegidas en caso de robo o daño accidental durante 90 días posteriores a la fecha de compra indicada en el recibo de la tienda con un beneficio máximo de US$5,000 por incidente y un tope de US$20,000 por 12 meses. La compra debe ser pagada en su totalidad con tu tarjeta de crédito MasterCard Black.
+                                        Compra confiada con tus tarjetas Mastercard Black BHD León pues la mayoría de tus compras están protegidas en caso de robo o daño accidental durante 90 días posteriores a la fecha de compra indicada en el recibo de la tienda con un beneficio máximo de US$5,000 por incidente y un tope de US$20,000 por 12 meses. La compra debe ser pagada en su totalidad con tu tarjeta de crédito Mastercard Black BHD León.
                                         <br><br>
                                         *Este beneficio solo aplica para tus tarjetas Mastercard Black  BHD León.
                                     </span>
@@ -1030,7 +1030,7 @@
                                 <h4 class="benefits-panel--info__title">Cuotas BHD León.</h4>
                                 <div class="collapse" id="cuotas-leon">
                                     <span>
-                                        Es la línea de crédito adicional de tu tarjeta principal, que funciona con un límite independiente para que puedas realizar compras pagando directamente en el comercio de tu preferencia. Con tus tarjetas de crédito Mastercard Platinum y Black BHD León puedes pagar tus consumos en la cantidad de cuotas que quieras. Desde adquirir un electrodoméstico, comprar ropa o tus vacaciones soñadas hasta cubrir los gastos escolares de tus hijos. Conoce más aquí.
+                                        Es la línea de crédito adicional de tu tarjeta principal, que funciona con un límite independiente para que puedas realizar compras pagando directamente en el comercio de tu preferencia. Con tus tarjetas Mastercard Platinum y Black BHD León puedes pagar tus consumos en la cantidad de cuotas que quieras. Desde adquirir un electrodoméstico, comprar ropa o tus vacaciones soñadas hasta cubrir los gastos escolares de tus hijos. Conoce más aquí.
                                     </span>
                                 </div>
                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#cuotas-leon" aria-expanded="false" aria-controls="collapseExample">
@@ -1056,7 +1056,7 @@
                                 <h4 class="benefits-panel--info__title">Beneficios Exclusivos Tarjetas Mujer.</h4>
                                 <div class="collapse" id="leon-stars">
                                     <span>
-                                        Es la única tarjeta en el m ercado diseñada para satisfacer los gustos y exigencias de la mujer.
+                                        Es la única tarjeta en el mercado diseñada para satisfacer los gustos y exigencias de la mujer.
                                         <br><br>
                                         Paga en establecimientos, ordena tus comidas por delivery, compra por internet y retira en cajeros automáticos de todo el mundo.
                                     </span>
@@ -1073,7 +1073,7 @@
     </section>
     <footer class="footer">
         <div class="container-fluid">
-            <div class="cities-fotter--logo">
+            <div class="cities-footer--logo">
                 <img src="img/footer-logo.png" alt="">
             </div>
         </div>
