--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                                         Realiza tu reserva con 24 horas de antelación a través de <a href="https://beforeboarding.com/" target="_blank">https://beforeboarding.com</a> *Acceso para la Sala Premium y Sala Caribe en AILA y Sala Zafiro en El Cibao. **la fecha de corte anual es cada 1 de julio. ***Si usas los servicios de salida y llegada habrás utilizado 2 visitas. Si vas acompañado, habrás utilizado tantas visitas como acompañantes viajen contigo.
                                         <br>
                                         <br>
-                                        *Este beneficio solo aplica para tus tarjetas Mastercard Platinum y Black BHD León.
+                                        *Este beneficio solo aplica para tus tarjetas Mastercard Black BHD León.
                                     </span>
                                 </div>
                                 <button  type="button" data-bs-toggle="collapse" data-bs-target="#before" aria-expanded="false" aria-controls="collapseExample">
