--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                                 <div class="collapse" id="delay">
                                     <span>
                                         Debes registrar su vuelo antes de la hora de salida programada en
-                                        <a style="color: #000;" href="https://flightdelaypass.mastercard.com/" target="_blank">https://flightdelaypass.mastercard.com/</a> y si la aerolínea anuncia un retraso de más
+                                        <a style="color: #000;word-break: break-all;" href="https://flightdelaypass.mastercard.com/" target="_blank">https://flightdelaypass.mastercard.com/</a> y si la aerolínea anuncia un retraso de más
                                         de dos horas, proporciona acceso LoungeKey a una sala de espera en el aeropuerto
                                         para ti y hasta cuatro (4) acompañantes de viaje.
                                     </span>
